<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="com.example.android.watereyez.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/introText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="@dimen/txtPadding"
            android:text="@string/txt1"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/txtSize"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/img_height"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/img_marg"
            android:scaleType="fitCenter"
            android:src="@drawable/water_bw" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:padding="@dimen/txtPadding"
            android:text="@string/txt2"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/txtSize"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/buttonstate"
            android:text="@string/btn1" />

    </LinearLayout>


</ScrollView>

